--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -11,10 +11,6 @@
   display: block;
 }
 
-.ag-shop-footer {
-  display: none;
-}
-
 .ag-shop-slider h3 {
   line-height: 1.2em;
 }
@@ -155,9 +151,153 @@ div.desktop-products-container--gridList {
 
 .ag-wrap-balls{
   padding: 30px;
-  border-right: 1px solid #e0e0e0;
+  border-left: 1px solid #e0e0e0;
 }
 
 .ag-wrap-balls img{
   margin-left: 15px;
+}
+
+/*-- Slider --*/
+
+.fas{
+  font-size: 27px;
+}
+
+.fa-arrow-left{
+  position: absolute;
+  top: 255px;
+  left: 40px;
+  z-index: 1;
+  color: #80cbc2;
+}
+
+.fa-arrow-right{
+  position: absolute;
+  z-index: 1;
+  top: 255px;
+  left: 245px;
+  color: #80cbc2;
+
+}
+
+.fa-arrow-left:hover{
+  color: #fff;
+  cursor: pointer;
+}
+.fa-arrow-right:hover{
+  color: #fff;
+  cursor: pointer;
+}
+
+.ag-shop-slider__dots{
+  right: 609px;
+  bottom: 16px;
+}
+
+/*@ Footer @*/
+
+.ag-shop-footer {
+  margin-top: auto;
+  border-top: 1px solid #ebebeb;
+}
+.ag-shop-footer__links {
+  box-sizing: border-box;
+  padding: 2px 20px;
+  background: rgba(255,255,255,1);
+  color: #3a3a39;
+}
+.ag-shop-footer__link {
+  background: none;
+  padding: 0;
+  border: none;
+  outline: none;
+  border-radius: 0;
+  text-decoration: none;
+  color: inherit;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+  display: block;
+  margin: 40px 0;
+  font-family: 'SF UI Text', Arial, sans-serif;
+  font-size: 16px;
+  font-size: 0.75rem;
+  color: #3a3a39;
+  transition: opacity 0.2s ease-in-out;
+}
+.ag-shop-footer__link::moz-focus-inner {
+  border: 0;
+  outline: none;
+}
+.ag-shop-footer__link:focus,
+.ag-shop-footer__link:active {
+  outline: none;
+}
+.ag-shop-footer__link:hover {
+  opacity: 0.7;
+}
+.ag-shop-footer__link:active {
+  opacity: 0.9;
+}
+.ag-shop-footer__copy {
+  display: block;
+  background: none;
+  padding: 20px;
+}
+.ag-shop-footer__copy-text {
+  opacity: 0.69;
+  line-height: 1;
+  font-family: 'SF UI Text', Arial, sans-serif;
+  font-size: 10px;
+  font-size: 0.8rem;
+  color: #9e9e9e;
+}
+.ag-shop-footer__copy-text a {
+  background: none;
+  padding: 0;
+  border: none;
+  outline: none;
+  border-radius: 0;
+  text-decoration: none;
+  color: inherit;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+}
+.ag-shop-footer__copy-text a::moz-focus-inner {
+  border: 0;
+  outline: none;
+
+}
+.ag-shop-footer__copy-text a:focus,
+.ag-shop-footer__copy-text a:active {
+  outline: none;
+}
+.ag-shop-footer__copy-text a:hover {
+  text-decoration: underline;
+}
+
+.ag-shop-footer__links {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  -js-display: flex;
+  display: flex;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: flex-start;
+}
+.ag-shop-footer__link {
+  margin: 24px 0 20px;
+  margin-left: 90px;
+  font-size: 20px;
+}
+
+.ag-shop-footer__link:first-child{
+  margin-left: 0;
+}
+.ag-shop-footer__copy {
+  text-align: left;
 }
