--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -57,6 +57,13 @@ div.desktop-products-container--gridList {
 
 /*Header*/
 
+@media (min-width: 992px)
+{
+.ag-shop-menu__item {
+    padding: 0 22px;
+  }
+}
+
 #ag-shop-nav__link--active {
   background-color: none;
   cursor: pointer;
