--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -484,6 +484,7 @@ div.desktop-products-container--gridList {
 
 .product-accordion{
   margin-top: 75px;
+  margin-bottom: 75px;
 }
 
 .product-accordion .btn-link{
