--- a/www/local/assets/styles/card.css
+++ b/www/local/assets/styles/card.css
@@ -967,7 +967,14 @@ body {
   overflow: hidden;
   background: #f8f8f8;
   cursor: pointer;
+  opacity: 0.5;
 }
+
+
+.picEnabled{
+    opacity: 1;
+}
+
 .ag-shop-card__preview--active {
   border: 1px solid rgba(0,122,108,1);
 }
@@ -2510,7 +2517,7 @@ input:checked + .ag-shop-card__places-item:before {
   }
 
   .ag-shop-card__preview--active{
-    border: none;
+/*    border: none; */
   }
 
 /*CSS slider-dowm*/
