--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -1034,3 +1034,15 @@ input:disabled + .ag-shop-card__places-item {
     z-index:199 !important;
 }
 
+.ag-shop-card__header--mobile{
+    margin-bottom: 0px;
+}
+
+@media (max-width: 460px) {
+    .ag-shop-card__container .grid--justify-space-between{
+        display:none;
+    }
+
+}
+
+
