--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -161,7 +161,8 @@ div.desktop-products-container--gridList {
 }
 
 .ag-catalog-icon {
-  margin-left: 10%;
+  /*margin-left: 10%;*/
+  width: 100%;
 }
 
 #ag-menu-list{
@@ -897,6 +898,280 @@ div.desktop-products-container--gridList {
 }
 /*======right filter=====*/
 
+
+/*@Блок поиска@*/
+
+.mobile-header-search {
+  display: inline-block;
+  vertical-align: top;
+  width: 50%;
+  /*width: -webkit-calc(100% - 114px);*/
+  /*width: calc(100% - 114px);*/
+  margin-top: 25px;
+}
+
+.mobile-header-search__input {
+  padding-left: 8px;
+  padding-right: 24px;
+  position: relative;
+  display: block;
+  /*width: 100%;*/
+}
+
+.mobile-header-search__input:before {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 0;
+  display: block;
+  width: 1px;
+  height: 23px;
+  background-color: #dddddd;
+}
+
+.mobile-header-search__input input {
+  display: block;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 10px 6px 10px 0;
+  font-family: inherit;
+}
+
+.mobile-header-search__input input::-webkit-input-placeholder {
+  font-size: 12px;
+  color: #343434;
+  opacity: 0.6;
+  font-family: "SFUIText-Regular";
+}
+
+.mobile-header-search__input input:-moz-placeholder {
+  /* Firefox 18- */
+  font-size: 12px;
+  color: #343434;
+  opacity: 0.6;
+  font-family: "SFUIText-Regular";
+}
+
+.mobile-header-search__input input::-moz-placeholder {
+  /* Firefox 19+ */
+  font-size: 12px;
+  color: #343434;
+  opacity: 0.6;
+  font-family: "SFUIText-Regular";
+}
+
+.mobile-header-search__input input:-ms-input-placeholder {
+  font-size: 12px;
+  color: #343434;
+  opacity: 0.6;
+  font-family: "SFUIText-Regular";
+}
+
+.mobile-header-search__clear {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  padding: 0;
+  margin: 0;
+  border: none;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  width: 24px;
+  height: 34px;
+  background-color: transparent;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: visibility 300ms, opacity 300ms;
+  -o-transition: visibility 300ms, opacity 300ms;
+  transition: visibility 300ms, opacity 300ms;
+}
+
+.mobile-header-search__clear.show-clear {
+  /*top: 0;
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: visibility 300ms, opacity 300ms;
+  -o-transition: visibility 300ms, opacity 300ms;
+  transition: visibility 300ms, opacity 300ms;*/
+}
+
+.mobile-header-search__clear:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  display: block;
+  /*width: 12px;*/
+  height: 12px;
+  -webkit-transform: translate(50%, -50%);
+  -ms-transform: translate(50%, -50%);
+  transform: translate(50%, -50%);
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background-color: #d5d5d5;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-size: 8px 8px;
+  background-size: 8px;
+  background-image: url("../img/icon__search-close.png");
+  -webkit-transition: background-color 300ms;
+  -o-transition: background-color 300ms;
+  transition: background-color 300ms;
+}
+
+.mobile-header-search__clear:hover,
+.mobile-header-search__clear:active,
+.mobile-header-search__clear:focus {
+  outline: none;
+  text-decoration: none;
+}
+
+.mobile-header-search__clear:hover:after,
+.mobile-header-search__clear:active:after,
+.mobile-header-search__clear:focus:after {
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-transition: background-color 300ms;
+  -o-transition: background-color 300ms;
+  transition: background-color 300ms;
+}
+
+.mobile-search-status {
+  position: fixed;
+  top: -100%;
+  left: 50%;
+  min-width: 320px;
+  width: 768px;
+  /*min-height: 80px;*/
+  overflow-y: auto;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background-color: white;
+  z-index: 204;
+  padding: 0 12px 20px 12px;
+  -webkit-transition: top 400ms;
+  -o-transition: top 400ms;
+  transition: top 400ms;
+}
+
+.mobile-search-status.tt-open[aria-expanded="true"] {
+  top: 59px;
+  -webkit-transition: top 400ms;
+  -o-transition: top 400ms;
+  transition: top 400ms;
+  overflow-y: scroll;
+  height: 100%;
+}
+
+.mobile-search-status.tt-empty {
+  display: none;
+}
+
+.mobile-search-result {
+  padding: 5px 0 15px 0;
+}
+
+.mobile-search-result__info {
+  font-size: 12px;
+  line-height: 20px;
+  color: #939393;
+}
+
+.mobile-search-query:before {
+  content: '“';
+}
+
+.mobile-search-query:after {
+  content: '”';
+}
+
+.mobile-search-notfind {
+  position: fixed;
+  top: 59px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: 199;
+  background-color: #fff;
+  opacity: 1;
+  -webkit-transition: top 400ms, opacity 500ms;
+  -o-transition: top 400ms, opacity 500ms;
+  transition: top 400ms, opacity 500ms;
+
+}
+
+
+.mobile-search-notfind .mobile-search-result__info {
+  margin-top: 10px;
+}
+
+.mobile-search-notfind.disabled {
+  top: -100%;
+  opacity: 0;
+  -webkit-transition: top 400ms, opacity 500ms;
+  -o-transition: top 400ms, opacity 500ms;
+  transition: top 400ms, opacity 500ms;
+}
+
+
+.mobile-search-notfind-wrapper {
+  position: absolute;
+  top: 37%;
+  left: 50%;
+  display: block;
+  width: 300px;
+  height: auto;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.mobile-search-notfind-wrapper .mobile-search-result__info {
+  margin: 0;
+}
+
+.mobile-search-query {
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+
+.icon-search-notfind {
+  display: block;
+  width: 100%;
+  height: 38px;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-size: 36px 36px;
+  background-size: 36px 36px;
+  background-image: url("../img/icon__search-notfind.svg");
+}
+
+.mobile-search-notfind__reset {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 12px;
+  line-height: 20px;
+  padding: 7px 12px;
+  margin: 8px 0;
+  color: #343434;
+  background-color: #f2f2f2;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+
+.twitter-typeahead{
+  width: 100%;
+}
 
 /*@Media queries@*/
 
