--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -1083,8 +1083,15 @@ div.desktop-products-container--gridList {
 }
 
 .tt-menu{
-  background-color: #F1F0F0;
+  background-color: #fff;
+  border: 1px solid #F1F0F0;
+  border-radius: 5%;  
   font-size: 12px;
+  margin-left:15px;
+  cursor: pointer;
+}
+.tt-selectable:hover{
+  background-color: #f1f0f0;
 }
 
 .mobile-search-status.tt-empty {
