--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -182,11 +182,15 @@ div.desktop-products-container--gridList {
 
 .ag-wrap-balls{
   padding: 25px;
-  border-left: 1px solid #e0e0e0;
+  /*border-left: 1px solid #e0e0e0;*/
 }
 
 .ag-wrap-balls img{
   /*margin-left: 15px;*/
+}
+
+.ag-shop-dropdown-menu{
+  padding-left: 84%;
 }
 
 /*-- Slider --*/
@@ -928,6 +932,87 @@ div.desktop-products-container--gridList {
   background:#fff;
   
 }
+/*---@@---*/
+
+/*Burger menu*/
+
+.section-burger {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 35%;
+}
+.menu-btn-burger {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: relative;
+
+}
+.menu-btn-burger span,
+.menu-btn-burger span::before,
+.menu-btn-burger span::after {
+    position: absolute;
+    top: 50%; margin-top: -1px;
+    left: 50%; margin-left: -10px;
+    width: 20px;
+    height: 2px;
+    background-color: #222;
+}
+.menu-btn-burger span::before,
+.menu-btn-burger span::after {
+    content: '';
+    display: block;
+    transition: 0.2s;
+}
+.menu-btn-burger span::before {
+    transform: translateY(-5px);
+}
+.menu-btn-burger span::after {
+    transform: translateY(5px);
+}
+
+.menu-btn_active span:before {
+    transform: rotate(-35deg);
+    width: 10px;
+    transform-origin: left bottom;
+}
+.menu-btn_active span:after {
+    transform: rotate(35deg);
+    width: 10px;
+    transform-origin: left top;
+}
+
+.menu-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.menu-nav {
+    background-color: #fff;
+    height: 50px;
+
+}
+.menu-nav__link {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    margin-right: 20px;
+}
+.menu-nav__link {
+    transition: 0.5s;
+    transform-origin: right center;
+    transform: translateX(50%);
+    opacity: 0;
+}
+.menu-nav__link_active {
+    transform: translateX(0%);
+    opacity: 1;
+}
+
+
+/*---@----*/
 
 
 
