--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -151,6 +151,17 @@ div.desktop-products-container--gridList {
   height: 70px;
 }
 
+.ag-shop-profile-circle{
+  height: 75px;
+  width: 75px;
+  background-color: #ffffff;
+  /*background-image: url('<?= $arResult["AVATAR"]?>');*/
+  background-position: center;
+  border-radius: 50%;
+  margin-left: -50%;
+
+}
+
 #shop-title{
   font-size: 24px;
   font-weight: 600;
